--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@vuepress/plugin-search": "^2.0.0-beta.49",
     "vue": "^3.2.36",
     "vuepress": "^2.0.0-beta.49",
-    "vuepress-plugin-md-enhance": "^2.0.0-beta.87",
-    "vuepress-theme-hope": "^2.0.0-beta.87"
+    "vuepress-theme-hope": "2.0.0-beta.89"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
