--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "devDependencies": {
     "@vuepress/client": "^2.0.0-beta.49",
     "@vuepress/plugin-search": "^2.0.0-beta.49",
+    "markdown-it-abbr": "^1.0.4",
     "vue": "^3.2.36",
     "vuepress": "^2.0.0-beta.49",
-    "vuepress-theme-hope": "2.0.0-beta.89"
+    "vuepress-plugin-md-enhance": "^2.0.0-beta.91"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "docs:clean-dev": "vuepress dev docs --clean-cache"
-  }
+  },
+  "dependencies": {}
 }
